@@ -1,3 +1,8 @@
+2009-02-03  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	Bump to b45.
+	
 2009-01-28  Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
